--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-# Force GitHub to classify .sql files as SQL
-*.sql linguist-language=SQL linguist-generated=false
- 
+*.sql linguist-language=SQL
+leetcode/database/*.sql linguist-language=SQL
